--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.1",
+    "lucide-react": "^0.475.0",
     "match-sorter": "^8.0.0",
     "motion": "^12.4.7",
     "react": "^19.0.0",
